--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -1,17 +1,22 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{% block lang %}en{% endblock %}">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="">
+    {% block meta %}
+    {% endblock %}
+
+    {% block title %}<title>Title</title>{% endblock %}
+
+    {% block styles %}{% endblock %}
 </head>
 <body>
+{% include 'includes/header.html' %}
 <div class="container">
-    <header>
-    </header>
-    <div class="content"></div>
-    <footer></footer>
+    {% block content %}{% endblock %}
 </div>
+{% include 'includes/footer.html' %}
+{% block scripts %}
+{% endblock %}
 </body>
 </html>
